--- a/index.html
+++ b/index.html
@@ -3,36 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>你的名字 | GitHub.io</title>
+  <title>Liqiang Niu | GitHub.io</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>你好，我是 [Liqiang Niu（牛力强）]</h1>
-    <p>研究员 | 腾讯微信（上海）</p>
+    <h1>你好，我是 Liqiang Niu（牛力强）</h1>
+    <p> 研究员 | 腾讯微信（上海）</p>
   </header>
 
   <section class="about">
     <h2>关于我</h2>
-    <p>热爱编程与开源社区，擅长前端开发与数据分析。热衷于分享技术知识，持续学习新技术。</p>
+    <p> 2009 - 2016：本硕 就读于南京大学 计算机科学与技术系 自然语言处理实验室。</p>
+    <p> 2016 - present: 应用研究 就职于 腾讯微信事业群 base上海。</p>
   </section>
 
   <section class="projects">
     <h2>我的项目</h2>
     <ul>
-      <li><a href="https://github.com/ 你的用户名/项目1" target="_blank">项目1名称</a> - 简短描述</li>
-      <li><a href="https://github.com/ 你的用户名/项目2" target="_blank">项目2名称</a> - 简短描述</li>
+      <li>微信图片翻译项目</li>
     </ul>
   </section>
 
   <section class="contact">
     <h2>联系我</h2>
-    <p>📧 邮箱: yourname@example.com</p>
-    <p>🌐 GitHub: <a href="https://github.com/ 你的用户名">github.com/你的用户名</a></p>
+    <p>📧 邮箱: simpleniulq2013 AT gmail DOT com</p>
+    <p>🌐 Google Scholar: <a href="https://scholar.google.com/citations?user=FbJyUYoAAAAJ&user=9Qk5MEAAAAAJ"> Liqiang Niu's Google Scholar </a></p>
   </section>
 
   <footer>
-    <p>© 2025 你的名字</p>
+    <p>© 2025 Liqiang Niu</p>
   </footer>
 </body>
 </html>
